--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
-    "jsdom": "^25.0.1"
+    "franc": "^6.2.0",
+    "jsdom": "^25.0.1",
+    "langs": "^2.0.0"
   }
 }
